Added missing Debian 11 info

--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -13,6 +13,7 @@ Bootstrapping can be used with {debian} clients for performing initial state run
 {suse} does not provide support for {debian} operating systems.
 {productname} allows you to manage {debian} clients, but support is not provided.
 Using {productname} to manage {debian} clients is experimental.
+These instructions have been tested on {debian}{nbsp}10 and {debian}{nbsp}11.
 Do not rely on {debian} clients in a production environment.
 ====
 
