--- a/modules/snippets/pages/supported-client-systems-snippet.adoc
+++ b/modules/snippets/pages/supported-client-systems-snippet.adoc
@@ -70,8 +70,13 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {debian} 11
+| {x86_64}, {aarch64}, armv7l, i586
+| {cross}
+| {check}
+
 | {debian} 10
-| {x86_64}
+| {x86_64}, {aarch64}, armv7l, i586
 | {cross}
 | {check}
 
