--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -97,8 +97,13 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {debian} 11
+| {x86_64}, {aarch64}, armv7l, i586
+| {cross}
+| {check}
+
 | {debian} 10
-| {x86_64}
+| {x86_64}, {aarch64}, armv7l, i586
 | {cross}
 | {check}
 
@@ -220,6 +225,11 @@ ifeval::[{uyuni-content} == true]
 | {centos} 7
 | {x86_64}, {ppc64le}, {aarch64}
 | {check}
+| {check}
+
+| {debian} 11
+| {x86_64}, {aarch64}, armv7l, i586
+| {cross}
 | {check}
 
 | {debian} 10
