fix; changelog entry https://bugzilla.suse.com/show_bug.cgi?id=1203422 https://github.com/SUSE/spacewalk/issues/18992

--- a/modules/administration/pages/tshoot-notifications.adoc
+++ b/modules/administration/pages/tshoot-notifications.adoc
@@ -34,4 +34,4 @@ To enable or disable a notification type, add or edit a line as follows in [path
 java.notifications_type_disabled = OnboardingFailed,ChannelSyncFailed,ChannelSyncFinished
 ----
 
-For default setting and configuration options, see the [path]``usr/share/rhn/config-defaults/rhn_java.conf`` template file.
+For default settings and configuration options, see the [path]``usr/share/rhn/config-defaults/rhn_java.conf`` template file.
