Added missing Debian 11 info (#1773)
* Added missing Debian 11 info

* Removed architectures from Debian support as per review.

* Fixed incorrect path.

--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -97,6 +97,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {debian} 11
+| {x86_64}
+| {cross}
+| {check}
+
 | {debian} 10
 | {x86_64}
 | {cross}
@@ -222,8 +227,13 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 
+| {debian} 11
+| {x86_64}
+| {cross}
+| {check}
+
 | {debian} 10
-| {x86_64}, {aarch64}, armv7l, i586
+| {x86_64}
 | {cross}
 | {check}
 
