--- a/modules/administration/pages/ansible-compliance-as-code.adoc
+++ b/modules/administration/pages/ansible-compliance-as-code.adoc
@@ -260,7 +260,7 @@ scap-security-guide-debian
 SUSE Manager Tools
 
 | Bash Script Folder |
-`/usr/share/scap-security-guide/`
+`/usr/share/scap-security-guide/bash`
 
 | Bash Scripts |
 debian10-script-anssi_np_nt28_average.sh +
@@ -268,4 +268,9 @@ debian10-script-anssi_np_nt28_high.sh +
 debian10-script-anssi_np_nt28_minimal.sh +
 debian10-script-anssi_np_nt28_restrictive.sh +
 debian10-script-standard.sh +
+debian11-script-anssi_np_nt28_average.sh +
+debian11-script-anssi_np_nt28_high.sh +
+debian11-script-anssi_np_nt28_minimal.sh +
+debian11-script-anssi_np_nt28_restrictive.sh +
+debian11-script-standard.sh +
 |===
