--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -107,6 +107,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {debian} 11
+| {x86_64}
+| {cross}
+| {check}
+
 | {debian} 10
 | {x86_64}
 | {cross}
@@ -227,8 +232,13 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 
+| {debian} 11
+| {x86_64}
+| {cross}
+| {check}
+
 | {debian} 10
-| {x86_64}, {aarch64}, armv7l, i586
+| {x86_64}
 | {cross}
 | {check}
 
