Default notification settings (#1774)
https://bugzilla.suse.com/show_bug.cgi?id=1203422
https://github.com/SUSE/spacewalk/issues/18992

--- a/modules/administration/pages/tshoot-notifications.adoc
+++ b/modules/administration/pages/tshoot-notifications.adoc
@@ -28,9 +28,10 @@ To change this value, add or edit this line in [path]``/etc/rhn/rhn.conf``:
 java.notifications_lifetime = 30
 ----
 
-All notification types are enabled by default.
-To disable a notification type, add or edit this line in [path]``/etc/rhn/rhn.conf``:
+To enable or disable a notification type, add or edit a line as follows in [path]``/etc/rhn/rhn.conf``:
 
 ----
 java.notifications_type_disabled = OnboardingFailed,ChannelSyncFailed,ChannelSyncFinished
 ----
+
+For default settings and configuration options, see the [path]``usr/share/rhn/config-defaults/rhn_java.conf`` template file.
