Remaining Debian 9 changes.

--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -8,7 +8,7 @@ This section contains information about registering Salt clients running {debian
 {suse} does not provide support for {debian} operating systems.
 {productname} allows you to manage {debian} clients, but support is not provided.
 Using {productname} to manage {debian} clients is experimental.
-These instructions have been tested on {debian}{nbsp}9 Stretch and {debian}{nbsp}10 Buster.
+These instructions have been tested on {debian}{nbsp}10 and {debian}{nbsp}11.
 Do not rely on {debian} clients in a production environment.
 ====
 
@@ -25,13 +25,6 @@ Bootstrapping can be used with {debian} clients for performing initial state run
 == Prepare to Register
 
 Some preparation is required before you can register {debian} clients to the {productname} Server:
-
-* If you are using Debian{nbsp}9, install the required packages on the client before you attempt to register.
-  On the client, at the command prompt, as root, run:
-+
-----
-apt install apt-transport-https python-apt python3-apt
-----
 
 * Ensure DNS is correctly configured and provides an entry for the client.
   Alternatively, you can configure the ``/etc/hosts`` files on both the {productname} Server and the client with the appropriate entries.
@@ -55,7 +48,6 @@ The products you need for this procedure are:
 |===
 
 | OS Version  | Product Name
-| {debian} 9  | Debian 9
 | {debian} 10 | Debian 10
 | {debian} 11 | Debian 11
 |===
@@ -71,7 +63,6 @@ The channels you need for this procedure are:
 |===
 
 | OS Version  | Product Name
-| {debian} 9  | debian-9-pool-amd64
 | {debian} 10 | debian-10-pool-amd64
 | {debian} 11 | debian-11-pool-amd64
 |===
@@ -95,12 +86,6 @@ The channels you need for this procedure are:
 | Client Channel
 | Updates Channel
 | Security Channel
-
-| {debian} 9
-| debian-9-pool-amd64-uyuni
-| debian-9-amd64-uyuni-client
-| debian-9-amd64-main-updates-uyuni
-| debian-9-amd64-main-security-uyuni
 
 | {debian} 10
 | debian-10-pool-amd64-uyuni
