--- a/modules/snippets/pages/supported-client-systems-snippet.adoc
+++ b/modules/snippets/pages/supported-client-systems-snippet.adoc
@@ -75,11 +75,6 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
-| {debian} 9
-| {x86_64}
-| {cross}
-| {check}
-
 | {oracle} 8
 | {x86_64}, {aarch64}
 | {cross}
@@ -210,11 +205,6 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {check}
 
-| {debian} 9
-| {x86_64}, {aarch64}, armv7l, i586
-| {cross}
-| {check}
-
 | {oracle} 8
 | {x86_64}, {aarch64}
 | {cross}
@@ -260,11 +250,5 @@ endif::[]
 
 [NOTE]
 ====
-{sles} 11, {rhel} 6, {oracle} 6, CentOS 6, {sles}-ES 6, and {ubuntu} 16.04 are end-of-life upstream and no longer supported by {suse} as client operating systems.
-SUSE Manager Client Tools for these operating systems are still provided from SCC for convenience.
-
-{debian} 9 is approaching end-of-life stage. 
-For a grace period of 3 months it  will be considered as deprecated and may only be supported on a best-effort basis.
-After 3 months it will be moved to the list of unsupported systems.
+include::../../client-configuration/pages/snippets/eol-clients.adoc[]
 ====
-
