Final backport changes.

--- a/modules/snippets/pages/supported-client-systems-snippet.adoc
+++ b/modules/snippets/pages/supported-client-systems-snippet.adoc
@@ -70,6 +70,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {debian} 11
+| {x86_64}
+| {cross}
+| {check}
+
 | {debian} 10
 | {x86_64}
 | {cross}
