--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -107,6 +107,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {debian} 11
+| {x86_64}
+| {cross}
+| {check}
+
 | {debian} 10
 | {x86_64}
 | {cross}
@@ -227,10 +232,16 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 
-| {debian} 10
-| {x86_64}, {aarch64}, armv7l, i586
+| {debian} 11
+| {x86_64}
 | {cross}
 | {check}
+
+| {debian} 10
+| {x86_64}
+| {cross}
+| {check}
+
 
 | {oracle} 8
 | {x86_64}, {aarch64}
@@ -277,7 +288,32 @@ endif::[]
 
 
 //EOL clients
-include::snippets/eol-clients.adoc[]
+//include::snippets/eol-clients.adoc[]
+
+[[eol.clients]]
+//EOL Client Systems
+
+When the distibution reaches end-of-life, it enters grace period of 3 months when the support is considered deprecated.
+After that period, the product is considered unsupported.
+Any support may only be available on the best-effort basis.
+
+[cols="1,1,1,1", options="header"]
+.Clients approaching end-of-life and end of support
+|===
+
+| Operating System
+| Architecture
+| End-of-life date
+| End of support
+
+| {debian} 9
+| {x86_64}, {aarch64}, armv7l, i586
+| 2022-06-30
+| 2022-09-30
+
+|===
+
+For more information about end-of-life dates, see https://endoflife.software/operating-systems.
 
 
 == Supported Tools Packages
