--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -97,6 +97,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {debian} 11
+| {x86_64}
+| {cross}
+| {check}
+
 | {debian} 10
 | {x86_64}
 | {cross}
@@ -222,8 +227,13 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 
+| {debian} 11
+| {x86_64}
+| {cross}
+| {check}
+
 | {debian} 10
-| {x86_64}, {aarch64}, armv7l, i586
+| {x86_64}
 | {cross}
 | {check}
 
@@ -267,7 +277,32 @@ endif::[]
 
 
 //EOL clients
-include::../../client-configuration/pages/snippets/eol-clients.adoc[]
+//include::../../client-configuration/pages/snippets/eol-clients.adoc[]
+
+[[eol.clients]]
+//EOL Client Systems
+
+When the distibution reaches end-of-life, it enters grace period of 3 months when the support is considered deprecated.
+After that period, the product is considered unsupported.
+Any support may only be available on the best-effort basis.
+
+[cols="1,1,1,1", options="header"]
+.Clients approaching end-of-life and end of support
+|===
+
+| Operating System
+| Architecture
+| End-of-life date
+| End of support
+
+| {debian} 9
+| {x86_64}, {aarch64}, armv7l, i586
+| 2022-06-30
+| 2022-09-30
+
+|===
+
+For more information about end-of-life dates, see https://endoflife.software/operating-systems.
 
 
 [IMPORTANT]
