SUSE clients as monitoring server https://github.com/SUSE/spacewalk/issues/18989

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -24,7 +24,8 @@ ifeval::[{uyuni-content} == true]
 endif::[]
 
 You need to install Prometheus and Grafana on a machine separate from the {productname} Server.
-We recommend to use a managed Salt client as your monitoring server.
+We recommend to use a managed Salt {suse} client as your monitoring server.
+Other clients are not supported as a monitoring server.
 
 Prometheus fetches metrics using a pull mechanism, so the server must be able to establish TCP connections to monitored clients.
 Clients must have corresponding open ports and be reachable over the network.
