Moving tshoot pages from Install Guide to Admin Guide.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -77,8 +77,46 @@ endif::[]
 *** xref:tshoot-saltboot.adoc[Troubleshooting Saltboot]
 *** xref:tshoot-sync.adoc[Troubleshooting Synchronization]
 *** xref:tshoot-taskomatic.adoc[Troubleshooting Taskomatic]
-
-
+//*****
+// NEW Nav Bar
+//
+** xref:tshoot-intro-NEW.adoc[Troubleshooting NEW]
+//ABC
+*** xref:tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
+*** xref:tshoot-custom-channel.adoc[Troubleshooting Custom Channel]
+//DEF
+*** xref:tshoot-diskspace.adoc[Troubleshooting Disk Space]
+*** xref:tshoot-firewalls.adoc[Troubleshooting Firewalls]
+//GHE
+*** xref:tshoot-highsynctimesoverwan.adoc[Troubleshooting high sync times over WAN]
+//IJK
+*** xref:tshoot-inactiveclients.adoc[Troubleshooting Inactive Clients]
+*** xref:tshoot-iss.adoc[Troubleshooting Inter-Server Synchronization]
+//LMN
+*** xref:tshoot-localcert.adoc[Troubleshooting Local Certificates]
+*** xref:tshoot-logintimeout.adoc[Troubleshooting Login Timeout]
+*** xref:tshoot-mail.adoc[Troubleshooting Mail Configuration]
+*** xref:tshoot-not-enough-disk-space.adoc[Not Enough Disk Space]
+*** xref:tshoot-notifications.adoc[Troubleshooting Notifications]
+//OPQ
+*** xref:tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
+*** xref:tshoot-packages.adoc[Troubleshooting Packages]
+*** xref:tshoot-packages-proxy.adoc[Troubleshooting Proxy Cache Repository]
+//RST
+*** xref:tshoot-registerclones.adoc[Troubleshooting Registering Cloned Clients]
+*** xref:tshoot-register-trad-as-salt-after-deletion.adoc[Registering traditional client as Salt minion after deleting it]
+*** xref:tshoot-registertradrhel.adoc[Troubleshooting Registering Traditional RHEL Clients]
+*** xref:tshoot-hostname-rename.adoc[Troubleshooting Renaming the Server]
+*** xref:tshoot-retrying-setup-target-system.adoc[Retrying to Set up the Target System]
+*** xref:tshoot-rpctimeout.adoc[Troubleshooting RPC Timeouts]
+*** xref:tshoot-saltboot.adoc[Troubleshooting Saltboot]
+*** xref:tshoot-schema-upgrade-fails.adoc[Schema Upgrade Fails]
+*** xref:tshoot-sync.adoc[Troubleshooting Synchronization]
+*** xref:tshoot-taskomatic.adoc[Troubleshooting Taskomatic]
+//UVW
+*** xref:tshoot-webui-fails-load.adoc[The Web UI Fails to Load]
+//XYZ
+//-----------------
 
 
 ifdef::backend-pdf[]
