Fixed files' anchors.

--- a/modules/administration/pages/tshoot-register-trad-as-salt-after-deletion.adoc
+++ b/modules/administration/pages/tshoot-register-trad-as-salt-after-deletion.adoc
@@ -1,4 +1,4 @@
-[[upgrade-troubleshooting]]
+[[troubleshooting-register-trad-as-salt-after-deletion]]
 = Troubleshooting
 
 This section contains some common problems you might encounter with {productname} upgrades, and solutions to resolving them.
