--- a/modules/administration/pages/tshoot-retrying-setup-target-system.adoc
+++ b/modules/administration/pages/tshoot-retrying-setup-target-system.adoc
@@ -1,4 +1,4 @@
-[[upgrade-troubleshooting]]
+[[troubleshooting-retrying-setup-target-system]]
 = Troubleshooting
 
 This section contains some common problems you might encounter with {productname} upgrades, and solutions to resolving them.
