--- a/modules/administration/pages/tshoot-webui-fails-load.adoc
+++ b/modules/administration/pages/tshoot-webui-fails-load.adoc
@@ -1,4 +1,4 @@
-[[upgrade-troubleshooting]]
+[[troubleshooting-webui-fails-load]]
 = Troubleshooting
 
 This section contains some common problems you might encounter with {productname} upgrades, and solutions to resolving them.
