--- a/modules/administration/pages/tshoot-not-enough-disk-space.adoc
+++ b/modules/administration/pages/tshoot-not-enough-disk-space.adoc
@@ -1,4 +1,4 @@
-[[upgrade-troubleshooting]]
+[[troubleshooting-not-enough-disk-space]]
 = Troubleshooting
 
 This section contains some common problems you might encounter with {productname} upgrades, and solutions to resolving them.
