--- a/modules/administration/pages/tshoot-schema-upgrade-fails.adoc
+++ b/modules/administration/pages/tshoot-schema-upgrade-fails.adoc
@@ -1,4 +1,4 @@
-[[upgrade-troubleshooting]]
+[[troubleshooting-schema-upgrade-fails]]
 = Troubleshooting
 
 This section contains some common problems you might encounter with {productname} upgrades, and solutions to resolving them.
