--- a/modules/client-configuration/pages/clients-rocky.adoc
+++ b/modules/client-configuration/pages/clients-rocky.adoc
@@ -81,7 +81,7 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 [IMPORTANT]
 ====
-For {rocky} 8 and 9 clients, add both the Base and AppStream channels.
+For {rocky}{nbsp}8 and {rocky}{nbsp}9 clients, add both the Base and AppStream channels.
 You require packages from both channels.
 If you do not add both channels, you cannot create the bootstrap repository, due to missing packages.
 ====
