added missing k3s navlist reference

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -43,6 +43,7 @@ endif::[]
 
 *** xref:proxy-container-installation.adoc[Install Containerized Proxy]
 *** xref:install-pubcloud.adoc[Install on Public Cloud]
+*** xref:proxy-container-k3s-installation.adoc[Install on K3s]
 
 ifeval::[{suma-content} == true]
 *** xref:install-ibmz.adoc[Install on IBM Z]
