Tidying up 1st file transferred to Admin Guide.

--- a/modules/administration/pages/tshoot-not-enough-disk-space.adoc
+++ b/modules/administration/pages/tshoot-not-enough-disk-space.adoc
@@ -1,11 +1,5 @@
 [[troubleshooting-not-enough-disk-space]]
-= Troubleshooting
-
-This section contains some common problems you might encounter with {productname} upgrades, and solutions to resolving them.
-
-To get more information about an upgrade problem, check the migration log file.
-The log file is located at [path]``/var/log/rhn/migration.log`` on the system you are upgrading.
-
+= Troubleshooting Not Enough Disk Space
 
 ////
 
@@ -28,11 +22,11 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 ////
 
 
-
-== Not Enough Disk Space
-
 Check the available disk space before you begin migration.
 We recommend locating [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` on separate XFS file systems.
 
 When you are setting up a separate file system, edit [path]``/etc/fstab`` and remove the [path]``/var/lib/pqsql`` subvolume.
 Reboot the server to pick up the changes.
+
+To get more information about an upgrade problem, check the migration log file.
+The log file is located at [path]``/var/log/rhn/migration.log`` on the system you are upgrading.
