Tidying up of new file names and removing of generic content.

--- a/modules/administration/pages/tshoot-retrying-setup-target-system.adoc
+++ b/modules/administration/pages/tshoot-retrying-setup-target-system.adoc
@@ -1,11 +1,5 @@
 [[troubleshooting-retrying-setup-target-system]]
-= Troubleshooting
-
-This section contains some common problems you might encounter with {productname} upgrades, and solutions to resolving them.
-
-To get more information about an upgrade problem, check the migration log file.
-The log file is located at [path]``/var/log/rhn/migration.log`` on the system you are upgrading.
-
+= Troubleshooting Retrying to Set up the Target System
 
 ////
 
@@ -27,8 +21,6 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 
 ////
 
-
-== Retrying to Set up the Target System
 
 If you need to retry setting up the target system, follow these steps:
 
