--- a/modules/administration/pages/tshoot-webui-fails-load.adoc
+++ b/modules/administration/pages/tshoot-webui-fails-load.adoc
@@ -1,11 +1,5 @@
 [[troubleshooting-webui-fails-load]]
-= Troubleshooting
-
-This section contains some common problems you might encounter with {productname} upgrades, and solutions to resolving them.
-
-To get more information about an upgrade problem, check the migration log file.
-The log file is located at [path]``/var/log/rhn/migration.log`` on the system you are upgrading.
-
+= Troubleshooting {webui} Fails to Load
 
 ////
 
@@ -27,8 +21,6 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 
 ////
 
-
-== The {webui} Fails to Load
 
 Sometimes, the {webui} will not load after migration.
 This is usually caused by browser caching, if the new system has the same hostname and IP address as the old system.
