--- a/modules/administration/pages/tshoot-register-trad-as-salt-after-deletion.adoc
+++ b/modules/administration/pages/tshoot-register-trad-as-salt-after-deletion.adoc
@@ -1,11 +1,5 @@
 [[troubleshooting-register-trad-as-salt-after-deletion]]
-= Troubleshooting
-
-This section contains some common problems you might encounter with {productname} upgrades, and solutions to resolving them.
-
-To get more information about an upgrade problem, check the migration log file.
-The log file is located at [path]``/var/log/rhn/migration.log`` on the system you are upgrading.
-
+= Troubleshooting Registering a traditional client as Salt minion after deleting it
 
 ////
 
@@ -27,8 +21,6 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 
 ////
 
-
-== Registering a traditional client as Salt minion after deleting it
 
 This is not a valid scenario. Normally you migrate a traditional client to a Salt minion without deleting the client.
 Salt automatically detects that you have a traditional client and does the necessary changes itself. But if you somehow
