--- a/modules/administration/pages/tshoot-schema-upgrade-fails.adoc
+++ b/modules/administration/pages/tshoot-schema-upgrade-fails.adoc
@@ -1,11 +1,5 @@
 [[troubleshooting-schema-upgrade-fails]]
-= Troubleshooting
-
-This section contains some common problems you might encounter with {productname} upgrades, and solutions to resolving them.
-
-To get more information about an upgrade problem, check the migration log file.
-The log file is located at [path]``/var/log/rhn/migration.log`` on the system you are upgrading.
-
+= Troubleshooting Schema Upgrade Fails
 
 ////
 
@@ -27,9 +21,6 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 
 ////
 
-
-
-== Schema Upgrade Fails
 
 If the schema upgrade fails, the database version check and all the other spacewalk services do not start.
 Run [command]``spacewalk-service start`` for more information and hints how to proceed.
