--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -3,8 +3,8 @@
 
 This section contains information about registering traditional and Salt clients running {oracle} operating systems.
 
-Traditional clients are not available on {oracle}{nbsp}8.
-{oracle}{nbsp}8 clients are only supported as Salt clients.
+Traditional clients are not available on {oracle} 9 and 8.
+{oracle} 9 and {oracle} 8 clients are only supported as Salt clients.
 
 ifeval::[{suma-content} == true]
 [IMPORTANT]
@@ -35,9 +35,10 @@ For example, when working with `x86_64` architecture, you need this products:
 |===
 
 | OS Version | Product Name
-| {oracle} 6 | Oracle Linux 6 x86_64
-| {oracle} 7 | Oracle Linux 7 x86_64
+| {oracle} 9 | Oracle Linux 9 x86_64
 | {oracle} 8 | Oracle Linux 8 x86_64
+| {oracle} 7 | Oracle Linux 7 x86_64
+| {oracle} 6 | Oracle Linux 6 x86_64
 |===
 
 [NOTE]
@@ -58,9 +59,10 @@ The channels you need for this procedure are:
 |===
 
 | OS Version | Base Channel
-| {oracle} 6 | oraclelinux6-x86_64
-| {oracle} 7 | oraclelinux7-x86_64
+| {oracle} 9 | oraclelinux9-x86_64
 | {oracle} 8 | oraclelinux8-x86_64
+| {oracle} 7 | oraclelinux7-x86_64
+| {oracle} 6 | oraclelinux6-x86_64
 |===
 
 [NOTE]
@@ -88,20 +90,25 @@ The channels you need for this procedure are:
 | Client Channel
 | Updates Channel
 
-| {oracle} 6
-| oraclelinux6
-| oraclelinux6-uyuni-client
-| -
+| {oracle} 9
+| oraclelinux9
+| oraclelinux9-uyuni-client
+| oraclelinux9-appstream
+
+| {oracle} 8
+| oraclelinux8
+| oraclelinux8-uyuni-client
+| oraclelinux8-appstream
 
 | {oracle} 7
 | oraclelinux7
 | oraclelinux7-uyuni-client
 | -
 
-| {oracle} 8
-| oraclelinux8
-| oraclelinux8-uyuni-client
-| oraclelinux8-appstream
+| {oracle} 6
+| oraclelinux6
+| oraclelinux6-uyuni-client
+| -
 
 |===
 
@@ -124,7 +131,7 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 [IMPORTANT]
 ====
-For {oracle} 8 clients, add both the Base and AppStream channels.
+For {oracle} 9 and {oracle} 8 clients, add both the Base and AppStream channels.
 You require packages from both channels.
 If you do not add both channels, you cannot create the bootstrap repository, due to missing packages.
 ====
