--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -92,6 +92,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {almalinux} 9
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
+| {cross}
+| {check}
+
 | {almalinux} 8
 | {x86_64}, {aarch64}
 | {cross}
@@ -214,6 +219,11 @@ ifeval::[{uyuni-content} == true]
 
 | {alibabaclo} 2
 | {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {almalinux} 9
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {cross}
 | {check}
 
