--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -4,7 +4,7 @@
 This section contains information about registering traditional and Salt clients running {oracle} operating systems.
 
 Traditional clients are not available on {oracle} 9 and 8.
-{oracle} 9 and {oracle} 8 clients are only supported as Salt clients.
+{oracle} 9 and {oracle} 8 clients are only supported as Salt clients.
 
 ifeval::[{suma-content} == true]
 [IMPORTANT]
@@ -192,12 +192,12 @@ For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc
 
 [NOTE]
 ====
-For Oracle 8 clients use 
+For Oracle 9 and Oracle 8 clients use
 ----
 ol8-gpg-pubkey-82562EA9AD986DA3.key
 ----
 
-For Oracle 6 or 7 clients use 
+For Oracle 6 or 7 clients use
 ----
 ol67-gpg-pubkey-72F97B74EC551F0A3.key
 ----
