--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -19,7 +19,7 @@ Only in case a software channel is assigned to the client they will be imported 
 
 [NOTE]
 ====
-Because Debian based systems sign only metadata, there is typically no need to specify extra keys for single channels.
+Because Debian based systems sign only metadata, there is no need to specify extra keys for single channels.
 If a user configures an own GPG key to sign the metadata as described in "Use Your Own GPG Key" in xref:administration:repo-metadata.adoc[] the deployment and trust of that key is executed automatically.
 ====
 
