--- a/modules/client-configuration/pages/clients-rocky.adoc
+++ b/modules/client-configuration/pages/clients-rocky.adoc
@@ -18,7 +18,7 @@ You do not need to disable SELinux to register {rocky} clients to {productname}.
 
 Before you can register {rocky} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
 
-The architectures currently supported are: `x86_64` and `aarch64`.
+The architectures currently supported are: `x86_64` and `aarch64`, on version 9 additionally {ppc64le} and {s390x}.
 For full list of supported products and architectures, see xref:client-configuration:supported-features.adoc[].
 
 include::snippets/arch-other-note.adoc[]
