add ppc and s390

--- a/modules/client-configuration/pages/clients-almalinux.adoc
+++ b/modules/client-configuration/pages/clients-almalinux.adoc
@@ -32,7 +32,7 @@ You do not need to disable SELinux to register {almalinux} clients to {productna
 
 Before you can register {almalinux} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
 
-The architectures currently supported are: `x86_64` and `aarch64`.
+The architectures currently supported are: `x86_64` and `aarch64`, on version 9 additionally {ppc64le} and {s390x}.
 For full list of supported products and architectures, see xref:client-configuration:supported-features.adoc[].
 
 include::snippets/arch-other-note.adoc[]
