--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -122,6 +122,11 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
+| {oracle} 9
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
 | {oracle} 8
 | {x86_64}, {aarch64}
 | {cross}
@@ -249,6 +254,11 @@ ifeval::[{uyuni-content} == true]
 
 | {debian} 10
 | {x86_64}
+| {cross}
+| {check}
+
+| {oracle} 9
+| {x86_64}, {aarch64}
 | {cross}
 | {check}
 
