--- a/modules/client-configuration/pages/supported-features-oracle.adoc
+++ b/modules/client-configuration/pages/supported-features-oracle.adoc
@@ -19,7 +19,7 @@ The icons in this table indicate:
 * {salt} the feature is supported only on Salt clients
 
 
-[cols="1,1,1,1", options="header"]
+[cols="1,1,1,1,1", options="header"]
 .Supported Features on {oracle} Operating Systems
 |===
 
@@ -27,38 +27,46 @@ The icons in this table indicate:
 | {oracle}{nbsp}6
 | {oracle}{nbsp}7
 | {oracle}{nbsp}8
+| {oracle}{nbsp}9
 
 | Client
 | {check}
 | {check}
+| {salt}
 | {salt}
 
 | Operating system packages
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | Registration
 | {check}
 | {check}
+| {salt}
 | {salt}
 
 | Install packages
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | Apply patches (requires CVE ID)
 | {check}
 | {check}
+| {salt}
 | {salt}
 
 | Remote commands
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | System package states
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -67,8 +75,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Group custom states
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -77,13 +87,16 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System set manager (SSM)
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | Product migration
+| N/A
 | N/A
 | N/A
 | N/A
@@ -92,9 +105,11 @@ The icons in this table indicate:
 | {trad}
 | {check}
 | {salt}
+| {salt}
 
 | Advanced Virtual Guest Management {star}
 | {cross}
+| {salt}
 | {salt}
 | {salt}
 
@@ -102,73 +117,88 @@ The icons in this table indicate:
 | {trad}
 | {trad}
 | {cross}
+| {cross}
 
 | Virtual Guest Installation (image template), as Host OS
 | {trad}
 | {check}
+| {salt}
 | {salt}
 
 | System deployment (PXE/Kickstart)
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | System redeployment (Kickstart)
 | {trad}
 | {check}
+| {salt}
 | {salt}
 
 | Contact methods
 | {trad}: OSAD, RHNSD, SSH-push. {salt}: ZeroMQ, Salt-SSH
 | {trad}: OSAD, RHNSD, SSH-push. {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
+| {salt}: ZeroMQ, Salt-SSH
 
 | Works with {productname} Proxy
 | {check}
 | {check}
+| {salt}
 | {salt}
 
 | Action chains
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | Staging (pre-download of packages)
 | {check}
 | {check}
+| {salt}
 | {salt}
 
 | Duplicate package reporting
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | CVE auditing (requires CVE ID)
 | {check}
 | {check}
+| {salt}
 | {salt}
 
 | SCAP auditing
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | Package verification
 | {trad}
 | {trad}
+| {cross}
 | {cross}
 
 | Package locking
 | {trad}
 | {check}
 | {question}
+| {question}
 
 | System locking
 | {trad}
 | {trad}
 | {cross}
+| {cross}
 
 | Maintenance Windows
+| {check}
 | {check}
 | {check}
 | {check}
@@ -177,23 +207,28 @@ The icons in this table indicate:
 | {trad}
 | {trad}
 | {cross}
+| {cross}
 
 | Configuration file management
 | {check}
 | {check}
+| {salt}
 | {salt}
 
 | Snapshots and profiles
 | {trad}. {salt}: Profiles supported, Sync not supported
 | {trad}. {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
+| {salt}: Profiles supported, Sync not supported
 
 | Power management
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | Monitoring
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -202,8 +237,10 @@ The icons in this table indicate:
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Build Docker image with OS
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -212,8 +249,10 @@ The icons in this table indicate:
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Build Kiwi image with OS
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -222,13 +261,16 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | AppStreams
 | N/A
 | N/A
 | {check}
+| {check}
 
 | Yomi
+| N/A
 | N/A
 | N/A
 | N/A
