--- a/modules/client-configuration/pages/clients-rocky.adoc
+++ b/modules/client-configuration/pages/clients-rocky.adoc
@@ -18,7 +18,7 @@ You do not need to disable SELinux to register {rocky} clients to {productname}.
 
 Before you can register {rocky} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
 
-The architectures currently supported are: `x86_64` and `aarch64`.
+The architectures currently supported are: `x86_64` and `aarch64`, on version 9 additionally {ppc64le} and {s390x}.
 For full list of supported products and architectures, see xref:client-configuration:supported-features.adoc[].
 
 include::snippets/arch-other-note.adoc[]
@@ -34,7 +34,7 @@ For example, when working with `x86_64` architecture, you need this product:
 |===
 
 | OS Version | Product Name
-| {rocky} 8 | {rocky} 8 x86_64
+| {rocky} 9  | {rocky} 9 x86_64
 |===
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -48,7 +48,7 @@ The channels you need for this procedure are:
 |===
 
 | OS Version | Base Channel
-| {rocky} 8 | rockylinux8-x86_64
+| {rocky} 9  | rockylinux9-x86_64
 |===
 
 include::snippets/addchannels_vendor_cli.adoc[]
@@ -63,9 +63,9 @@ The channels you need for this procedure are:
 .{rocky} Channels - CLI
 |===
 
-| OS Version | Base Channel | Client Channel       | AppStream Channel
-| {rocky} 8 | rockylinux8      | rockylinux8-uyuni-client | rockylinux8-appstream
-| {rocky} 9 | rockylinux9      | rockylinux9-uyuni-client | rockylinux9-appstream
+| OS Version | Base Channel | Client Channel           | AppStream Channel
+| {rocky} 9  | rockylinux9  | rockylinux9-uyuni-client | rockylinux9-appstream
+| {rocky} 8  | rockylinux8  | rockylinux8-uyuni-client | rockylinux8-appstream
 |===
 
 include::snippets/addchannels_novendor_cli_multiarch.adoc[]
@@ -81,7 +81,7 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 [IMPORTANT]
 ====
-For {rocky} 8 and 9 clients, add both the Base and AppStream channels.
+For {rocky}{nbsp}8 and {rocky}{nbsp}9 clients, add both the Base and AppStream channels.
 You require packages from both channels.
 If you do not add both channels, you cannot create the bootstrap repository, due to missing packages.
 ====
