--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -82,6 +82,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {sles} ES 9
+| {x86_64}
+| {cross}
+| {check}
+
 | {sles} ES 8
 | {x86_64}
 | {cross}
@@ -125,6 +130,11 @@ ifeval::[{suma-content} == true]
 | {oracle} 7
 | {x86_64}, {aarch64}
 | {check}
+| {check}
+
+| {rhel} 9
+| {x86_64}
+| {cross}
 | {check}
 
 | {rhel} 8
@@ -202,6 +212,11 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 
+| {sles} ES 9
+| {x86_64}
+| {cross}
+| {check}
+
 | {sles} ES 8
 | {x86_64}
 | {cross}
@@ -250,6 +265,11 @@ ifeval::[{uyuni-content} == true]
 | {oracle} 7
 | {x86_64}, {aarch64}
 | {check}
+| {check}
+
+| {rhel} 9
+| {x86_64}
+| {cross}
 | {check}
 
 | {rhel} 8
