--- a/modules/client-configuration/pages/supported-features-rh.adoc
+++ b/modules/client-configuration/pages/supported-features-rh.adoc
@@ -20,7 +20,7 @@ The icons in this table indicate:
 * {salt} the feature is supported only on Salt clients.
 
 
-[cols="1,1,1,1", options="header"]
+[cols="1,1,1,1,1", options="header"]
 .Supported Features on {rhel} Operating Systems
 |===
 
@@ -28,13 +28,16 @@ The icons in this table indicate:
 | {rhela}{nbsp}6
 | {rhela}{nbsp}7
 | {rhela}{nbsp}8
+| {rhela}{nbsp}9
 
 | Client
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | System packages
+| {redhat}
 | {redhat}
 | {redhat}
 | {redhat}
@@ -43,23 +46,28 @@ The icons in this table indicate:
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | Install packages
 | {check}
 | {check}
+| {salt}
 | {salt}
 
 | Apply patches
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | Remote commands
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | System package states
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -68,8 +76,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | Group custom states
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -78,8 +88,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | System set manager (SSM)
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -88,14 +100,17 @@ The icons in this table indicate:
 | N/A
 | N/A
 | N/A
+| N/A
 
 | Basic Virtual Guest Management {star}
 | {trad}
 | {check}
 | {salt}
+| {salt}
 
 | Advanced Virtual Guest Management {star}
 | {cross}
+| {salt}
 | {salt}
 | {salt}
 
@@ -103,73 +118,88 @@ The icons in this table indicate:
 | {trad}
 | {trad}
 | {cross}
+| {cross}
 
 | Virtual Guest Installation (image template), as Host OS
 | {trad}
 | {check}
+| {salt}
 | {salt}
 
 | System deployment (PXE/Kickstart)
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | System redeployment (Kickstart)
 | {trad}
 | {check}
 | {salt}
+| {salt}
 
 | Contact methods
-| {trad}: OSAD, RHNSD, SSH-push. {salt}: ZeroMQ, Salt-SSH
-| {trad}: OSAD, RHNSD, SSH-push. {salt}: ZeroMQ, Salt-SSH
+| {trad}: OSAD, RHNSD, SSH-push. {salt}: ZeroMQ, Salt-SSH
+| {trad}: OSAD, RHNSD, SSH-push. {salt}: ZeroMQ, Salt-SSH
+| {salt}: ZeroMQ, Salt-SSH
 | {salt}: ZeroMQ, Salt-SSH
 
 | Works with {productname} Proxy
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | Action chains
 | {check}
 | {check}
+| {salt}
 | {salt}
 
 | Staging (pre-download of packages)
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | Duplicate package reporting
 | {check}
 | {check}
+| {salt}
 | {salt}
 
 | CVE auditing
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | SCAP auditing
 | {check}
 | {check}
+| {salt}
 | {salt}
 
 | Package verification
 | {trad}
 | {trad}
 | {cross}
+| {cross}
 
 | Package locking
 | {trad}
 | {check}
+| {question}
 | {question}
 
 | System locking
 | {trad}
 | {trad}
 | {cross}
+| {cross}
 
 | Maintenance Windows
+| {check}
 | {check}
 | {check}
 | {check}
@@ -178,23 +208,28 @@ The icons in this table indicate:
 | {trad}
 | {trad}
 | {cross}
+| {cross}
 
 | Configuration file management
 | {check}
 | {check}
+| {salt}
 | {salt}
 
 | Snapshots and profiles
 | {trad}. {salt}: Profiles supported, Sync not supported
 | {trad}. {salt}: Profiles supported, Sync not supported
 | {salt}: Profiles supported, Sync not supported
+| {salt}: Profiles supported, Sync not supported
 
 | Power management
 | {check}
 | {check}
 | {salt}
+| {salt}
 
 | Monitoring
+| {salt}
 | {salt}
 | {salt}
 | {salt}
@@ -203,8 +238,10 @@ The icons in this table indicate:
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Build Docker image with OS
+| {question}
 | {question}
 | {question}
 | {question}
@@ -213,8 +250,10 @@ The icons in this table indicate:
 | {cross}
 | {cross}
 | {cross}
+| {cross}
 
 | Build Kiwi image with OS
+| {cross}
 | {cross}
 | {cross}
 | {cross}
@@ -223,13 +262,16 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 | {salt}
+| {salt}
 
 | AppStreams
 | N/A
 | N/A
 | {check}
+| {check}
 
 | Yomi
+| N/A
 | N/A
 | N/A
 | N/A
