--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -411,6 +411,13 @@ This section assumes you have setup your server using separate partitions for th
 
 
 
+[IMPORTANT]
+====
+When you backup files and directories, the backup tools store the user and group names of the filenames.
+The tools will automatically use the right IDs when you extract the files on the target system again.
+But if you mount existing partitions, you must align the ownership to the new system.
+====
+
 .Procedure: Recovering from a Crashed Root Partition
 . Install {productname}.
   Do not mount the [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` partitions.
