Ccg rhel9clones #18472 keichwa (#1788)
* add alma linux 9
* add oracle linux 9
* update feature list
* add oracle linux 9 gpg key
* add ppc and s390
* rocky changes from 4.3 branch

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -92,6 +92,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {almalinux} 9
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
+| {cross}
+| {check}
+
 | {almalinux} 8
 | {x86_64}, {aarch64}
 | {cross}
@@ -114,6 +119,11 @@ ifeval::[{suma-content} == true]
 
 | {debian} 10
 | {x86_64}
+| {cross}
+| {check}
+
+| {oracle} 9
+| {x86_64}, {aarch64}
 | {cross}
 | {check}
 
@@ -217,6 +227,11 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {check}
 
+| {almalinux} 9
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
+| {cross}
+| {check}
+
 | {almalinux} 8
 | {x86_64}, {aarch64}
 | {cross}
@@ -239,6 +254,11 @@ ifeval::[{uyuni-content} == true]
 
 | {debian} 10
 | {x86_64}
+| {cross}
+| {check}
+
+| {oracle} 9
+| {x86_64}, {aarch64}
 | {cross}
 | {check}
 
