remove more misleading ES 9 refs

--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -156,7 +156,7 @@ The products you need for this procedure are:
 | {redhat} 6 | RHEL6 Base x86_64
 | {redhat} 7 | RHEL7 Base x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base
-| {redhat} 9 | RHEL or SLES ES 9 Base
+| {redhat} 9 | RHEL 9 Base
 |===
 
 [NOTE]
@@ -318,7 +318,7 @@ The channels you need for this procedure are:
 | {redhat} 6 | RHEL6 Base x86_64 | rhel6-pool-x86_64
 | {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
-| {redhat} 9 | RHEL or SLES ES 9 Base | rhel9-pool-x86_64
+| {redhat} 9 | RHEL 9 Base | rhel9-pool-x86_64
 |===
 
 [NOTE]
