Ccg rhel9rhel #18472 keichwa (#1789)
* add rhel 9

--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -5,7 +5,7 @@ If you are running {rhel} clients directly, rather than using {sleses}, you need
 This section contains information about using {redhat} update infrastructure (RHUI) to register traditional and Salt clients running {rhel} operating systems.
 
 Traditional clients are available on {rhel}{nbsp}6 and 7 only.
-{rhel}{nbsp}8 clients are supported as Salt clients.
+{rhel}{nbsp}8 and {rhel}{nbsp}9 clients are supported as Salt clients.
 
 If you are running your clients in a public cloud, such as Amazon EC2, use this method.
 
@@ -180,6 +180,7 @@ The products you need for this procedure are:
 | {redhat} 6 | RHEL6 Base x86_64
 | {redhat} 7 | RHEL7 Base x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base
+| {redhat} 9 | RHEL 9 Base
 |===
 
 [NOTE]
@@ -222,6 +223,11 @@ The channels you need for this procedure are:
 | rhel8-pool-x86_64
 | -
 | res8-suse-manager-tools-x86_64
+
+| {redhat} 9
+| rhel9-pool-x86_64
+| -
+| res9-suse-manager-tools-x86_64
 
 |===
 
@@ -331,6 +337,7 @@ The channels you need for this procedure are:
 | {redhat} 6 | RHEL6 Base x86_64 | rhel6-pool-x86_64
 | {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
+| {redhat} 9 | RHEL 9 Base           | rhel9-pool-x86_64
 |===
 
 [NOTE]
