--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -137,6 +137,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {rhel} 9
+| {x86_64}
+| {cross}
+| {check}
+
 | {rhel} 8
 | {x86_64}
 | {cross}
@@ -270,6 +275,11 @@ ifeval::[{uyuni-content} == true]
 | {oracle} 7
 | {x86_64}, {aarch64}
 | {check}
+| {check}
+
+| {rhel} 9
+| {x86_64}
+| {cross}
 | {check}
 
 | {rhel} 8
