--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -5,7 +5,7 @@ If you are running {rhel} clients directly, rather than using {sleses}, you need
 This section contains information about using the {redhat} content delivery network (CDN) to register traditional and Salt clients running {rhel} operating systems.
 
 Traditional clients are available on {rhel}{nbsp}6 and 7 only.
-{rhel}{nbsp}8 clients are supported as Salt clients.
+{rhel}{nbsp}8 and {rhel}{nbsp}9 clients are supported as Salt clients.
 
 For information about using {redhat} update infrastructure (RHUI) instead, see xref:client-configuration:clients-rh-rhui.adoc[].
 
@@ -156,6 +156,7 @@ The products you need for this procedure are:
 | {redhat} 6 | RHEL6 Base x86_64
 | {redhat} 7 | RHEL7 Base x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base
+| {redhat} 9 | RHEL 9 Base
 |===
 
 [NOTE]
@@ -199,6 +200,11 @@ The channels you need for this procedure are:
 | rhel8-pool-x86_64
 | -
 | res8-suse-manager-tools-x86_64
+
+| {redhat} 9
+| rhel9-pool-x86_64
+| -
+| res9-suse-manager-tools-x86_64
 
 |===
 
@@ -312,6 +318,7 @@ The channels you need for this procedure are:
 | {redhat} 6 | RHEL6 Base x86_64 | rhel6-pool-x86_64
 | {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
+| {redhat} 9 | RHEL 9 Base | rhel9-pool-x86_64
 |===
 
 [NOTE]
