Ccg rhel9rhel #18472 keichwa (#1789)
* add rhel 9

--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -3,6 +3,10 @@
 
 If you are running {rhel} clients directly, rather than using {sleses}, you need to use Red Hat sources to retrieve and update packages.
 This section contains information about using {redhat} update infrastructure (RHUI) to register traditional and Salt clients running {rhel} operating systems.
+
+Traditional clients are available on {rhel}{nbsp}6 and 7 only.
+{rhel}{nbsp}8 and {rhel}{nbsp}9 clients are supported as Salt clients.
+
 If you are running your clients in a public cloud, such as Amazon EC2, use this method.
 
 It is possible to use RHUI in conjunction with the {redhat} content delivery network (CDN) to manage your {rhel} subscriptions.
@@ -21,13 +25,6 @@ All clients that get updates using this RHUI certificate need to be correctly li
 ====
 When {rhel} clients registered with RHUI are switched off, {redhat} might declare the certificate invalid.
 In this case, you need to turn the client on again, or get a new RHUI certificate.
-====
-
-
-[NOTE]
-====
-Traditional clients are available on {rhel}{nbsp} 7 only.
-{rhel}{nbsp}8 clients are supported as Salt clients.
 ====
 
 
@@ -184,6 +181,7 @@ The products you need for this procedure are:
 | OS Version | Product Name
 | {redhat} 7 | RHEL7 Base x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base
+| {redhat} 9 | RHEL 9 Base
 |===
 
 //[NOTE]
@@ -221,6 +219,11 @@ The channels you need for this procedure are:
 | rhel8-pool-x86_64
 | -
 | res8-manager-tools-pool-x86_64
+
+| {redhat} 9
+| rhel9-pool-x86_64
+| -
+| res9-suse-manager-tools-x86_64
 
 |===
 
@@ -329,6 +332,7 @@ The channels you need for this procedure are:
 | OS Version | Base Product          | Base Channel
 | {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
+| {redhat} 9 | RHEL 9 Base           | rhel9-pool-x86_64
 |===
 
 //[NOTE]
