--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -139,6 +139,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {rhel} 9
+| {x86_64}
+| {cross}
+| {check}
+
 | {rhel} 8
 | {x86_64}
 | {cross}
@@ -282,6 +287,11 @@ ifeval::[{uyuni-content} == true]
 | {oracle} 7
 | {x86_64}, {aarch64}
 | {check}
+| {check}
+
+| {rhel} 9
+| {x86_64}
+| {cross}
 | {check}
 
 | {rhel} 8
