--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -413,8 +413,8 @@ This section assumes you have setup your server using separate partitions for th
 
 [IMPORTANT]
 ====
-When you backup files and directories, the backup tools store the user and group names of the filenames.
-The tools will automatically use the right IDs when you extract the files on the target system again.
+After a new installation of a system most users and groups get different IDs.
+Most backup systems store the names instead of the IDs and will restore the files with the correct ownership and permissions.
 But if you mount existing partitions, you must align the ownership to the new system.
 ====
 
