Warn about ownership in Admin (#1792)
* Warn about file ownership in Restore section of the Admin guide
https://bugzilla.suse.com/show_bug.cgi?id=1202612
https://github.com/SUSE/spacewalk/issues/19061
* Update modules/administration/pages/backup-restore.adoc
Co-authored-by: Michael Calmer <mc@suse.de>

--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -411,6 +411,13 @@ This section assumes you have setup your server using separate partitions for th
 
 
 
+[IMPORTANT]
+====
+After a new installation of a system most users and groups get different IDs.
+Most backup systems store the names instead of the IDs and will restore the files with the correct ownership and permissions.
+But if you mount existing partitions, you must align the ownership to the new system.
+====
+
 .Procedure: Recovering from a Crashed Root Partition
 . Install {productname}.
   Do not mount the [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` partitions.
