--- a/modules/installation-and-upgrade/pages/uyuni-proxy-setup.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-proxy-setup.adoc
@@ -13,7 +13,7 @@ This step is part of xref:installation-and-upgrade:install-proxy-uyuni.adoc[].
 To verify a successful installation, on the server select the [package]``pattern_uyuni_proxy`` package for installation.
 
 The salt-broker service will be automatically started after installation is complete.
-This service forwards the Salt interactions to the {productname} server.
+This service forwards Salt interactions to the {productname} Server.
 
 [NOTE]
 .Proxy Chains
