--- a/modules/installation-and-upgrade/pages/uyuni-proxy-setup.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-proxy-setup.adoc
@@ -13,9 +13,8 @@ This step is part of xref:installation-and-upgrade:install-proxy-uyuni.adoc[].
 To verify a successful installation, on the server select the [package]``pattern_uyuni_proxy`` package for installation.
 
 The salt-broker service will be automatically started after installation is complete.
-This service forwards the Salt interactions to the {productname} server.
+This service forwards Salt interactions to the {productname} Server.
 
-// REMARK 2019-08-23, ke: Is this a Salt proxy-only feature?
 [NOTE]
 .Proxy Chains
 ====
