Debian 9 and 11 changes backported.

--- a/modules/installation/pages/client-requirements.adoc
+++ b/modules/installation/pages/client-requirements.adoc
@@ -97,12 +97,12 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
-| {debian} 10
+| {debian} 11
 | {x86_64}
 | {cross}
 | {check}
 
-| {debian} 9
+| {debian} 10
 | {x86_64}
 | {cross}
 | {check}
@@ -227,13 +227,13 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 
-| {debian} 10
-| {x86_64}, {aarch64}, armv7l, i586
+| {debian} 11
+| {x86_64}
 | {cross}
 | {check}
 
-| {debian} 9
-| {x86_64}, {aarch64}, armv7l, i586
+| {debian} 10
+| {x86_64}
 | {cross}
 | {check}
 
@@ -277,7 +277,11 @@ endif::[]
 
 [NOTE]
 ====
-{rhel} 6, {oracle} 6, CentOS 6, {sles}-ES 6, and {ubuntu} 16.04 are end-of-life upstream and no longer supported by {suse} as client operating systems. SUSE Manager Client Tools for these operating systems are still provided from SCC for convenience.
+When the distibution reaches end-of-life, it enters grace period of 3 months when the support is considered deprecated.
+After that period, the product is considered unsupported.
+Any support may only be available on the best-effort basis.
+
+For more information about end-of-life dates, see https://endoflife.software/operating-systems.
 ====
 
 [IMPORTANT]
