Add information on changing Grafana password
Also, drop instructions for setting initial Grafana password as sensible
defaults are provided.

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -315,6 +315,16 @@ Monitoring formulas can also be configured for System Groups, by applying the sa
 For more information about the monitoring formulas, see xref:specialized-guides:salt/salt-formula-monitoring.adoc[].
 
 
+=== Change Grafana Password
+
+To change Grafana password please follow the steps described in upstream documentation.
+https://grafana.com/docs/grafana/latest/administration/user-management/user-preferences/#change-your-grafana-password
+
+In case you have lost admin password you can reset it using following command:
+----
+grafana-cli --configOverrides cfg:default.paths.data=/var/lib/grafana --homepath /usr/share/grafana admin reset-admin-password <new_password>
+----
+
 
 == Network Boundaries
 
