[WIP: attn JC] Tshooting removed from Cl Config Guide (#1790)
* Preparing tshooting files from Cl.Conf guide for transfer to Admin book.

* Temoved temp working files.

Co-authored-by: Joseph cayouette <jcayouette@suse.com>

--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -81,7 +81,7 @@ The products you need for this procedure are:
 ====
 {es} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {es} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:tshoot-intro.adoc[Troubleshooting].
 ====
 
 {productname} requires tools channels that contain additional software.
@@ -103,7 +103,7 @@ This procedure creates these tools channels:
 ====
 {es} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {es} 6 clients using these packages will fail.
-If you need to bootstrap new {es} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+If you need to bootstrap new {es} 6 clients, follow the troubleshooting procedure in xref:administration:tshoot-intro.adoc[Troubleshooting].
 ====
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -146,7 +146,7 @@ The channels you need for this procedure are:
 ====
 {es} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {es} 6 clients using these packages will fail.
-If you need to bootstrap new {es} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+If you need to bootstrap new {es} 6 clients, follow the troubleshooting procedure in xref:administration:tshoot-intro.adoc[Troubleshooting].
 ====
 
 include::snippets/addchannels_novendor_cli.adoc[]
@@ -266,5 +266,5 @@ For more information on registering your clients, see xref:client-configuration:
 [WARNING]
 ====
 To register and use {sleses}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
-For more information about how to resolve this error, see ``Registering Older Clients`` at xref:client-configuration:tshoot-clients.adoc[].
+For more information about how to resolve this error, see ``Registering Older Clients`` at xref:administration:tshoot-intro.adoc[Troubleshooting].
 ====
