--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -55,9 +55,17 @@ endif::[]
 ** xref:task-schedules.adoc[Task Schedules]
 ** xref:tuning-changelogs.adoc[Tuning Changelogs]
 ** xref:users.adoc[Users]
+
+
 ** xref:tshoot-intro.adoc[Troubleshooting]
+*** xref:tshoot-autoinstallation.adoc[Troubleshooting Autoinstallation]
+*** xref:tshoot-bare-metal-systems.adoc[Troubleshooting Bare Metal Systems]
+*** xref:tshoot-bootstrap-eol-centos6-clients.adoc[Troubleshooting Bootstrap End-of-Life {centos} 6 Clients]
+*** xref:tshoot-bootstrap-repo-for-eol-products.adoc[Troubleshooting Bootstrap Repository for End-of-Life Product]
+*** xref:tshoot-cloned-salt-clients.adoc[Troubleshooting Cloned Salt Clients]
 *** xref:tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
 *** xref:tshoot-custom-channel.adoc[Troubleshooting Custom Channel]
+*** xref:tshoot-disabling-fqdns-grain.adoc[Troubleshooting Disabling the FQDNS grain]
 *** xref:tshoot-diskspace.adoc[Troubleshooting Disk Space]
 *** xref:tshoot-firewalls.adoc[Troubleshooting Firewalls]
 *** xref:tshoot-highsynctimesoverwan.adoc[Troubleshooting high sync times over WAN]
@@ -82,7 +90,6 @@ endif::[]
 *** xref:tshoot-sync.adoc[Troubleshooting Synchronization]
 *** xref:tshoot-taskomatic.adoc[Troubleshooting Taskomatic]
 *** xref:tshoot-webui-fails-load.adoc[The Web UI Fails to Load]
-
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
