fixed incorrect syntax in administration guide causing document breaks

--- a/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
+++ b/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
@@ -1,26 +1,4 @@
-[[troubleshooting-high-sync-times-over-wan]]
 = Troubleshooting high sync times between {productname} Server and Proxy over WAN connections
-
-////
-PUT THIS COMMENT AT THE TOP OF TROUBLESHOOTING SECTIONS
-
-Troubleshooting format:
-
-One sentence each:
-Cause: What created the problem?
-Consequence: What does the user see when this happens?
-Fix: What can the user do to fix this problem?
-Result: What happens after the user has completed the fix?
-
-If more detailed instructions are required, put them in a "Resolving" procedure:
-.Procedure: Resolving Widget Wobbles
-. First step
-. Another step
-. Last step
-////
-
-
-
 
 Depending on what changes are executed in the WebUI or via an API call to distribution or system settings, [literal]``cobbler sync`` command may be required to transfer files from {productname} Server to {productname} Proxy systems.
 To accomplish this, cobbler uses a list of proxies specified in [literal]``/etc/cobbler/settings``.
@@ -52,7 +30,7 @@ The transfer took almost 30 minutes.
 By comparison, copying a single big file of the same size as [literal]``/srv/tftboot`` completes  within several minutes.
 
 
-//== Resolution and analysis
+== Resolution and analysis
 Switching to an [literal]``rsync``-based approach to copy files between {productname} Server and Proxy may help to reduce the transfer and wait times.
 
 A script to accomplish this task is available for download at https://suse.my.salesforce.com/sfc/p/1i000000gLOd/a/1i000000ll5B/B2AmvIJN2_JsAyjTQzCVP_x5ioVgd0bYN9X9NpMugS8.
@@ -120,7 +98,7 @@ Ignore ports 4505 and 4506 as these are used for Salt communication.
 ====
 
 
-//=== Conclusion 
+== Conclusion 
 Analysis of the TCPdumps showed the transfer of small files with a size of approx. 1800 bytes from {productname} Server to Proxy took around 0.3 seconds.
 
 While there were not many big files, the high number of smaller files resulted high number of established connections as new TCP connection is created for every single transferred file.
