Revert "fixed incorrect syntax in administration guide causing document breaks"
This reverts commit 0bb135091b85a61c8d78291f5d50b292050f5e87.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -6,6 +6,7 @@ include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 endif::[]
 
+
 * xref:admin-overview.adoc[Administration Guide]
 ** xref:actions.adoc[Actions]
 
@@ -40,7 +41,7 @@ endif::[]
 ** xref:organizations.adoc[Organizations]
 ** xref:patch-management.adoc[Patch Management]
 ** xref:reports.adoc[Reports Generation]
-** xref:security-intro.adoc[Security]
+** Security
 *** xref:master-fingerprint.adoc[Master Fingerprint]
 *** xref:repo-metadata.adoc[Repository Metadata]
 *** xref:mirror-sources.adoc[Mirror Sources]
@@ -57,7 +58,7 @@ endif::[]
 ** xref:tshoot-intro.adoc[Troubleshooting]
 *** xref:tshoot-autoinstallation.adoc[Troubleshooting Autoinstallation]
 *** xref:tshoot-bare-metal-systems.adoc[Troubleshooting Bare Metal Systems]
-*** xref:tshoot-bootstrap-eol-centos6-clients.adoc[Troubleshooting Bootstrap End-of-Life CentOS 6 Clients]
+*** xref:tshoot-bootstrap-eol-centos6-clients.adoc[Troubleshooting Bootstrap End-of-Life {centos} 6 Clients]
 *** xref:tshoot-bootstrap-repo-for-eol-products.adoc[Troubleshooting Bootstrap Repository for End-of-Life Product]
 *** xref:tshoot-cloned-salt-clients.adoc[Troubleshooting Cloned Salt Clients]
 *** xref:tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
