--- a/modules/administration/pages/tshoot-autoinstallation.adoc
+++ b/modules/administration/pages/tshoot-autoinstallation.adoc
@@ -1,3 +1,4 @@
+[[troubleshooting-autoinstallation]]
 = Troubleshooting Autoinstallation
 
 Depending on your base channel, new autoinstallation profiles might be subscribed to a channel that is missing required packages.
