--- a/modules/administration/pages/tshoot-bootstrap-eol-centos6-clients.adoc
+++ b/modules/administration/pages/tshoot-bootstrap-eol-centos6-clients.adoc
@@ -1,4 +1,5 @@
-= Troubleshooting Bootstrap End-of-Life CentOS 6 Clients
+[[troubleshooting-bootstrap-eol-centos6-clients]]
+= Troubleshooting Bootstrap End-of-Life {centos} 6 Clients
 
 {centos} 6 is now at end-of-life, and the images provided in the client repository for this operating system are out of date.
 Bootstrapping new {centos} 6 clients using these packages will fail.
@@ -8,7 +9,7 @@ If you need to bootstrap new {centos} 6 clients you can edit the existing reposi
 
 
 
-.Procedure: Troubleshooting Bootstrapping a New CentOS 6 Client
+.Procedure: Troubleshooting Bootstrapping a New {centos} 6 Client
 . On the {centos} 6 client, at the command prompt, open the ``CentOS-Base.repo`` file, located in the ``/etc/yum.repos.d/`` directory.
 . Locate the ``mirrorlist`` entry, pointing to ``mirrorlist.centos.org``.
   There may be more than one entry.
@@ -25,7 +26,6 @@ mirrorlist=http://mirrorlist.centos.org/?release=6&arch=$basearch&repo=os
 ----
 baseurl=https://vault.centos.org/centos/6/os/$basearch/
 ----
-+
 . Repeat for each repository listed in the file.
 . Bootstrap the client.
   For more information about bootstrapping {centos} clients, see xref:client-configuration:clients-centos.adoc[].
