--- a/modules/administration/pages/tshoot-bootstrap-repo-for-eol-products.adoc
+++ b/modules/administration/pages/tshoot-bootstrap-repo-for-eol-products.adoc
@@ -1,3 +1,4 @@
+[[troubleshooting-bootstrap-repo-for-eol-products]]
 = Troubleshooting Bootstrap Repository for End-of-Life Products
 
 When supported products are synchronized, bootstrap repositories are automatically created and regenerated on the {productname} Server.
