--- a/modules/administration/pages/tshoot-disabling-fqdns-grain.adoc
+++ b/modules/administration/pages/tshoot-disabling-fqdns-grain.adoc
@@ -1,3 +1,4 @@
+[[troubleshooting-disabling-fqdns-grain]]
 = Troubleshooting Disabling the FQDNS grain
 
 The FQDNS grain returns the list of all the fully qualified DNS services in the system.
