--- a/modules/administration/pages/tshoot-mounting-tmp-with-noexec.adoc
+++ b/modules/administration/pages/tshoot-mounting-tmp-with-noexec.adoc
@@ -1,3 +1,4 @@
+[[troubleshooting-mounting-tmp-with-noexec]]
 = Troubleshooting Mounting /tmp with noexec
 
 Salt runs remote commands from [path]``/tmp`` on the client's file system.
