--- a/modules/administration/pages/tshoot-passing-grains-to-start-event.adoc
+++ b/modules/administration/pages/tshoot-passing-grains-to-start-event.adoc
@@ -1,3 +1,4 @@
+[[troubleshooting-passing-grains-to-start-event]]
 = Troubleshooting Passing Grains to a Start Event
 
 Every time a Salt client starts, it passes the ``machine_id`` grain to {productname}. {productname} uses this grain to determine if the client is registered.
