--- a/modules/administration/pages/tshoot-proxy-connections-and-fqdns.adoc
+++ b/modules/administration/pages/tshoot-proxy-connections-and-fqdns.adoc
@@ -1,3 +1,4 @@
+[[troubleshooting-proxy-connections-and-fqdns]]
 = Troubleshooting Proxy Connections and FQDN
 
 Sometimes clients connected through a proxy appear in the {webui}, but do not show that they are connected through a proxy.
