--- a/modules/administration/pages/tshoot-registerclones.adoc
+++ b/modules/administration/pages/tshoot-registerclones.adoc
@@ -1,4 +1,24 @@
+[[troubleshooting-register-clones]]
 = Troubleshooting Registering Cloned Clients
+
+////
+PUT THIS COMMENT AT THE TOP OF TROUBLESHOOTING SECTIONS
+
+Troubleshooting format:
+
+One sentence each:
+Cause: What created the problem?
+Consequence: What does the user see when this happens?
+Fix: What can the user do to fix this problem?
+Result: What happens after the user has completed the fix?
+
+If more detailed instructions are required, put them in a "Resolving" procedure:
+.Procedure: Resolving Widget Wobbles
+. First step
+. Another step
+. Last step
+////
+
 
 If you are using {productname} to manage virtual machines, you might find it useful to create clones of your VMs.
 A clone is a VM that uses a primary disk that is an exact copy of an existing disk.
