--- a/modules/administration/pages/tshoot-rh-cdn-channel-and-multiple-certs.adoc
+++ b/modules/administration/pages/tshoot-rh-cdn-channel-and-multiple-certs.adoc
@@ -1,3 +1,4 @@
+[[troubleshooting-rh-cdn-channel-and-multiple-certs]]
 = Troubleshooting Red Hat CDN Channel and Multiple Certificates
 
 The {redhat} content delivery network (CDN) channels sometimes provide multiple certificates, but the {productname} {webui} can only import a single certificate.
