--- a/modules/administration/pages/tshoot-bare-metal-systems.adoc
+++ b/modules/administration/pages/tshoot-bare-metal-systems.adoc
@@ -1,4 +1,6 @@
+[[troubleshooting-bare-metal-systems]]
 = Troubleshooting Bare Metal Systems
+
 
 If a bare metal system on the network is not automatically added to the [guilabel]``Systems`` list, check these things first:
 
