--- a/modules/administration/pages/tshoot-cloned-salt-clients.adoc
+++ b/modules/administration/pages/tshoot-cloned-salt-clients.adoc
@@ -1,3 +1,4 @@
+[[troubleshooting-cloned-salt-clients]]
 = Troubleshooting Clients Cloned Salt Clients
 
 If you have used your hypervisor clone utility, and attempted to register the cloned Salt client, you might get this error:
