--- a/modules/administration/pages/tshoot-corruptrepo.adoc
+++ b/modules/administration/pages/tshoot-corruptrepo.adoc
@@ -1,4 +1,23 @@
+[[troubleshooting-corrupt-repos]]
 = Troubleshooting Corrupt Repositories
+
+////
+PUT THIS COMMENT AT THE TOP OF TROUBLESHOOTING SECTIONS
+
+Troubleshooting format:
+
+One sentence each:
+Cause: What created the problem?
+Consequence: What does the user see when this happens?
+Fix: What can the user do to fix this problem?
+Result: What happens after the user has completed the fix?
+
+If more detailed instructions are required, put them in a "Resolving" procedure:
+.Procedure: Resolving Widget Wobbles
+. First step
+. Another step
+. Last step
+////
 
 The information in the repository metadata files can become corrupt or out of date.
 This can create problems with updating clients.
