--- a/modules/administration/pages/tshoot-diskspace.adoc
+++ b/modules/administration/pages/tshoot-diskspace.adoc
@@ -1,4 +1,23 @@
+[[troubleshooting-disk-space]]
 = Troubleshooting Disk Space
+
+////
+PUT THIS COMMENT AT THE TOP OF TROUBLESHOOTING SECTIONS
+
+Troubleshooting format:
+
+One sentence each:
+Cause: What created the problem?
+Consequence: What does the user see when this happens?
+Fix: What can the user do to fix this problem?
+Result: What happens after the user has completed the fix?
+
+If more detailed instructions are required, put them in a "Resolving" procedure:
+.Procedure: Resolving Widget Wobbles
+. First step
+. Another step
+. Last step
+////
 
 Running out of disk space can have a severe impact on the {productname} database and file structure which, in most cases, is not recoverable.
 {productname} monitors free space in specific directories, and has configurable alerts.
