--- a/modules/administration/pages/tshoot-inactiveclients.adoc
+++ b/modules/administration/pages/tshoot-inactiveclients.adoc
@@ -1,4 +1,23 @@
+[[troubleshooting-inactive-clients]]
 = Troubleshooting Inactive clients
+
+////
+PUT THIS COMMENT AT THE TOP OF TROUBLESHOOTING SECTIONS
+
+Troubleshooting format:
+
+One sentence each:
+Cause: What created the problem?
+Consequence: What does the user see when this happens?
+Fix: What can the user do to fix this problem?
+Result: What happens after the user has completed the fix?
+
+If more detailed instructions are required, put them in a "Resolving" procedure:
+.Procedure: Resolving Widget Wobbles
+. First step
+. Another step
+. Last step
+////
 
 A Taskomatic job periodically pings clients to ensure they are connected.
 Clients are considered inactive if they have not responded to a Taskomatic check in for 24 hours or more.
