--- a/modules/administration/pages/tshoot-not-enough-disk-space.adoc
+++ b/modules/administration/pages/tshoot-not-enough-disk-space.adoc
@@ -1,4 +1,26 @@
+[[troubleshooting-not-enough-disk-space]]
 = Troubleshooting Not Enough Disk Space
+
+////
+
+PUT THIS COMMENT AT THE TOP OF TROUBLESHOOTING SECTIONS
+
+Troubleshooting format:
+
+One sentence each:
+Cause: What created the problem?
+Consequence: What does the user see when this happens?
+Fix: What can the user do to fix this problem?
+Result: What happens after the user has completed the fix?
+
+If more detailed instructions are required, put them in a "Resolving" procedure:
+.Procedure: Resolving Widget Wobbles
+. First step
+. Another step
+. Last step
+
+////
+
 
 Check the available disk space before you begin migration.
 We recommend locating [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` on separate XFS file systems.
