--- a/modules/administration/pages/tshoot-reg-from-webui-fails-no-errors.adoc
+++ b/modules/administration/pages/tshoot-reg-from-webui-fails-no-errors.adoc
@@ -1,3 +1,4 @@
+[[troubleshooting-reg-from-webui-fails-no-errors]]
 = Troubleshooting Registration from {webui} fails and does not show any errors
 
 For the initial registration from the {webui}, all Salt clients are using Salt SSH.
