--- a/modules/administration/pages/tshoot-saltboot.adoc
+++ b/modules/administration/pages/tshoot-saltboot.adoc
@@ -1,4 +1,23 @@
+[[troubleshooting-saltboot]]
 = Troubleshooting the Saltboot Formula
+
+////
+PUT THIS COMMENT AT THE TOP OF TROUBLESHOOTING SECTIONS
+
+Troubleshooting format:
+
+One sentence each:
+Cause: What created the problem?
+Consequence: What does the user see when this happens?
+Fix: What can the user do to fix this problem?
+Result: What happens after the user has completed the fix?
+
+If more detailed instructions are required, put them in a "Resolving" procedure:
+.Procedure: Resolving Widget Wobbles
+. First step
+. Another step
+. Last step
+////
 
 Because of a problem in the computed partition size value, the saltboot formula can sometimes fail when it is created on SLE{nbsp}11 SP3 clients, with an error like this:
 
